--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@plugin '@tailwindcss/typography';
 
 @theme {
     --font-base: 'Golos Text', sans-serif;
@@ -76,5 +77,4 @@ h6 {
 
 a {
     font-weight: 600;
-    text-decoration: underline;
 }
