--- a/src/pages/en/projects/index.astro
+++ b/src/pages/en/projects/index.astro
@@ -10,16 +10,16 @@ const projects = await getCollection('projectsEN');
 ---
 
 <Layout>
-    <head>
+    <div>
         <title>Projects</title>
-    </head>
-    <div class='mx-auto px-5 max-w-200 grid grid-cols-2 gap-5'>
-        {
-            projects.map((project) => (
-                <a href={projectsURL + project.id} class='aspect-square overflow-hidden'>
-                    <Image src={project.data.thumbnail} alt={''} class='h-full w-full object-cover' />
-                </a>
-            ))
-        }
+        <div class='mx-auto px-5 max-w-200 grid grid-cols-2 gap-5'>
+            {
+                projects.map((project) => (
+                    <a href={projectsURL + project.id} class='aspect-square overflow-hidden'>
+                        <Image src={project.data.thumbnail} alt={''} class='h-full w-full object-cover' />
+                    </a>
+                ))
+            }
+        </div>
     </div>
 </Layout>
