--- a/src/pages/en/layout-en.astro
+++ b/src/pages/en/layout-en.astro
@@ -12,22 +12,22 @@ const pathName = Astro.url.pathname;
     </head>
     <body id='header'>
         <div>
-            <div class='header sticky z-[100] top-[0] flex px-4 py-2 mb-10 bg-(--background) text-lg' id='header'>
+            <div class='header sticky z-[100] top-[0] flex px-4 py-5 sm:py-3 mb-10 bg-(--background) text-lg' id='header'>
                 <a href={'/en'} class='cursor-pointer'>
                     <div class='header-logo m-auto sm:py-5 sm:px-5 text-[1.5em] font-bold'>Garutako</div>
                 </a>
                 <div class='flex flex-auto flex-wrap justify-end m-auto gap-3'>
                     <a href={'/en/projects'}>
-                        <div class='px-3 sm:px-3 sm:py-2 cursor-pointer bg-(--cyan) text-(--background) text-center min-w-20'>Projects</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--cyan) text-(--background) text-center min-w-20'>Projects</div>
                     </a>
                     <a href={'/en/blog'}>
-                        <div class='px-3 sm:px-3 sm:py-2 cursor-pointer bg-(--magenta) text-(--background) text-center min-w-20'>Blog</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--magenta) text-(--background) text-center min-w-20'>Blog</div>
                     </a>
                     <a href={'/en/about'}>
-                        <div class='px-3 sm:px-3 sm:py-2 cursor-pointer bg-(--yellow) text-(--background) text-center min-w-20'>About</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--yellow) text-(--background) text-center min-w-20'>About</div>
                     </a>
                     <a href={'/fr' + pathName.slice(3)}>
-                        <div class='px-3 sm:px-3 sm:py-2 cursor-pointer bg-(--text) text-(--background) text-center'>FR</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--text) text-(--background) text-center'>FR</div>
                     </a>
                 </div>
             </div>
