translated blog posts and tweaked missed details

--- a/src/pages/fr/layout-fr.astro
+++ b/src/pages/fr/layout-fr.astro
@@ -24,10 +24,10 @@ const pathName = Astro.url.pathname;
                         <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--magenta) text-(--background) text-center min-w-20'>Blog</div>
                     </a>
                     <a href={'/fr/about'}>
-                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--yellow) text-(--background) text-center min-w-20'>About</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--yellow) text-(--background) text-center min-w-20'>À propos</div>
                     </a>
                     <a href={'/en' + pathName.slice(3)}>
-                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--text) text-(--background) text-center'>FR</div>
+                        <div class='px-3 sm:px-3 py-2 cursor-pointer bg-(--text) text-(--background) text-center'>EN</div>
                     </a>
                 </div>
             </div>
