--- a/src/pages/fr/projects/[slug].astro
+++ b/src/pages/fr/projects/[slug].astro
@@ -27,7 +27,7 @@ const { Content } = await render(project);
     <div>
         <title>{project.data.title}</title>
         <div class='mx-auto max-w-200'>
-            <h1>{project.data.title}</h1>
+            <h1 class="font-bold">{project.data.title}</h1>
             <h2>{project.data.author}</h2>
             <br />
             <div class='aspect-5/2 overflow-hidden'>
